[gd_scene load_steps=10 format=3 uid="uid://dw1hwgaqc1fbb"]

[ext_resource type="Script" path="res://Assets/character_select_screen.gd" id="1_inelj"]
[ext_resource type="Texture2D" uid="uid://gkka28rblyvr" path="res://Assets/Sprites/WindowsBackground.png" id="2_hse6x"]
[ext_resource type="Script" path="res://Global.gd" id="3_fn6sm"]
[ext_resource type="Texture2D" uid="uid://cnr41g8s4vxk8" path="res://Assets/Sprites/Window.png" id="3_gyrg1"]
[ext_resource type="PackedScene" uid="uid://cmphh342h4r0n" path="res://mouse_player.tscn" id="4_52vkr"]
[ext_resource type="Script" path="res://Assets/Description.gd" id="4_te72v"]
[ext_resource type="Script" path="res://Assets/Description2.gd" id="5_nqntp"]
[ext_resource type="Script" path="res://Assets/Description3.gd" id="6_4do81"]
[ext_resource type="Script" path="res://Assets/Description4.gd" id="7_dgano"]

[node name="Version2 Select Screen" type="Node2D"]
script = ExtResource("1_inelj")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(4.5, 5.0625)
texture = ExtResource("2_hse6x")
script = ExtResource("3_fn6sm")

[node name="Window" type="Sprite2D" parent="."]
position = Vector2(576, 320)
scale = Vector2(4, 4.0625)
texture = ExtResource("3_gyrg1")

[node name="BackMenu" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="BackMenu"]
layout_mode = 0
offset_left = -8.0
offset_top = 576.0
offset_right = 168.0
offset_bottom = 653.0
scale = Vector2(0.753728, 0.841829)

[node name="MarginContainer" type="MarginContainer" parent="BackMenu/VBoxContainer"]
layout_mode = 2

[node name="BackMenu" type="Button" parent="BackMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 480.0
offset_top = 568.0
offset_right = 636.0
offset_bottom = 645.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Ready"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 104.0
offset_top = 176.0
offset_right = 312.0
offset_bottom = 256.0
scale = Vector2(0.386047, 1.08606)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Smite" type="Button" parent="VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SMITE"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
offset_left = 200.0
offset_top = 176.0
offset_right = 408.0
offset_bottom = 256.0
scale = Vector2(0.386047, 1.08606)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer4"]
layout_mode = 2

[node name="NewCar" type="Button" parent="VBoxContainer4/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New car!"

[node name="VBoxContainer7" type="VBoxContainer" parent="."]
offset_left = 488.0
offset_top = 176.0
offset_right = 696.0
offset_bottom = 256.0
scale = Vector2(0.386047, 1.08606)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer7"]
layout_mode = 2

[node name="Discord" type="Button" parent="VBoxContainer7/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Discord"

[node name="VBoxContainer8" type="VBoxContainer" parent="."]
offset_left = 584.0
offset_top = 176.0
offset_right = 792.0
offset_bottom = 256.0
scale = Vector2(0.386047, 1.08606)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer8"]
layout_mode = 2

[node name="Recycle" type="Button" parent="VBoxContainer8/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Recycle"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
offset_left = 96.0
offset_top = 96.0
offset_right = 304.0
offset_bottom = 176.0
scale = Vector2(1.00276, 0.887762)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="Slot 1" type="Button" parent="VBoxContainer3/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Ability 1"

[node name="VBoxContainer6" type="VBoxContainer" parent="."]
offset_left = 472.0
offset_top = 96.0
offset_right = 680.0
offset_bottom = 176.0
scale = Vector2(1.00276, 0.887762)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer6"]
layout_mode = 2

[node name="Slot 2" type="Button" parent="VBoxContainer6/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Ability 2"

[node name="Description" type="VBoxContainer" parent="."]
offset_left = 792.0
offset_top = 88.0
offset_right = 1007.0
offset_bottom = 168.0
scale = Vector2(1.25252, 2.73392)
script = ExtResource("4_te72v")

[node name="MarginContainer" type="MarginContainer" parent="Description"]
layout_mode = 2

[node name="Smite" type="Button" parent="Description/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Smite.exe
Smites the targeted location with a vertical
beam  of corrupted data after a short delay

Cooldown - 4 seconds
"

[node name="Description2" type="VBoxContainer" parent="."]
offset_left = 776.0
offset_top = 88.0
offset_right = 1001.0
offset_bottom = 168.0
scale = Vector2(1.25252, 2.73392)
script = ExtResource("5_nqntp")

[node name="MarginContainer" type="MarginContainer" parent="Description2"]
layout_mode = 2

[node name="NewCar" type="Button" parent="Description2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "New Car
After you place your brand new car down, 
it races across the screen horizontally after a 
short delay.
Cooldown - 3 seconds
"

[node name="Description3" type="VBoxContainer" parent="."]
offset_left = 784.0
offset_top = 88.0
offset_right = 992.0
offset_bottom = 180.0
scale = Vector2(1.3165, 2.48549)
script = ExtResource("6_4do81")

[node name="MarginContainer" type="MarginContainer" parent="Description3"]
layout_mode = 2

[node name="Discord" type="Button" parent="Description3/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Discord Spam
Click here for free discord nitro!
You place down a discord app that shoots
at the mouse periodically, disapearing 
after 15 seconds
Cooldown - 5	 seconds"

[node name="Description4" type="VBoxContainer" parent="."]
offset_left = 784.0
offset_top = 88.0
offset_right = 992.0
offset_bottom = 180.0
scale = Vector2(1.3165, 2.48549)
script = ExtResource("7_dgano")

[node name="MarginContainer" type="MarginContainer" parent="Description4"]
layout_mode = 2

[node name="Recycle" type="Button" parent="Description4/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Recycle
Have you emptied your recycling bin?
It falls down in a straight line from 
where you place it. 
Cooldown - 1 seconds"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 80.0
offset_top = 312.0
offset_right = 120.0
offset_bottom = 352.0
scale = Vector2(24.603, 0.301549)
color = Color(0.654902, 0.654902, 0.654902, 1)

[node name="MousePlayer" parent="." instance=ExtResource("4_52vkr")]

[connection signal="discord" from="." to="Description3" method="_on_version_2_select_screen_discord"]
[connection signal="discordN" from="." to="Description3" method="_on_version_2_select_screen_discord_n"]
[connection signal="newcar" from="." to="Description2" method="_on_version_2_select_screen_newcar"]
[connection signal="newcarN" from="." to="Description2" method="_on_version_2_select_screen_newcar_n"]
[connection signal="recycle" from="." to="Description4" method="_on_version_2_select_screen_recycle"]
[connection signal="recycleN" from="." to="Description4" method="_on_version_2_select_screen_recycle_n"]
[connection signal="smite" from="." to="Description" method="_on_version_2_select_screen_smite"]
[connection signal="smiteN" from="." to="Description" method="_on_version_2_select_screen_smite_n"]
[connection signal="pressed" from="BackMenu/VBoxContainer/MarginContainer/BackMenu" to="." method="_on_back_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2" to="." method="_on_v_box_container_2_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer2/MarginContainer/Smite" to="." method="_on_ability_1_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer2/MarginContainer/Smite" to="." method="_on_ability_1_mouse_exited"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/Smite" to="." method="_on_smite_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/Smite" to="Background" method="_on_smite_pressed"]
[connection signal="mouse_entered" from="VBoxContainer4/MarginContainer/NewCar" to="." method="_on_ability_2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer4/MarginContainer/NewCar" to="." method="_on_ability_2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer4/MarginContainer/NewCar" to="." method="_on_new_car_pressed"]
[connection signal="pressed" from="VBoxContainer4/MarginContainer/NewCar" to="Background" method="_on_new_car_pressed"]
[connection signal="mouse_entered" from="VBoxContainer7/MarginContainer/Discord" to="." method="_on_ability_3_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer7/MarginContainer/Discord" to="." method="_on_ability_3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer7/MarginContainer/Discord" to="Background" method="_on_discord_pressed"]
[connection signal="mouse_entered" from="VBoxContainer8/MarginContainer/Recycle" to="." method="_on_ability_4_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer8/MarginContainer/Recycle" to="." method="_on_ability_4_mouse_exited"]
[connection signal="pressed" from="VBoxContainer8/MarginContainer/Recycle" to="Background" method="_on_recycle_pressed"]
[connection signal="pressed" from="Description/MarginContainer/Smite" to="Background" method="_on_smite_pressed"]
[connection signal="pressed" from="Description2/MarginContainer/NewCar" to="." method="_on_new_car_pressed"]
[connection signal="pressed" from="Description3/MarginContainer/Discord" to="." method="_on_discord_pressed"]
[connection signal="pressed" from="Description4/MarginContainer/Recycle" to="Background" method="_on_recycle_pressed"]
